Super speedy fixes coming soon to a place near you

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -437,12 +437,12 @@ UKR_Remove_Khrushchev:0 "Remove Khrushchev"
 UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late."
 
 UKR_Broad_Coalition:0 "Coalition is formed"
-UKR_Broad_Coalition_desc:0 "Realizing the syndicalist threat, Hetman Skorapadsky decided to strike a bargain with the pro-Russian 'ViN' and nationalist 'OUN'. Both parties will get freedom of action in the regions, where they are especially popular, but in return they will support Skoropadsky's regime and our king."
+UKR_Broad_Coalition_desc:0 "Realising the syndicalist threat, Hetman Skorapadsky decided to strike a bargain with the pro-Russian 'ViN' and nationalist 'OUN'. Both parties will get freedom of action in the regions, where they are especially popular, but in return they will support Skoropadsky's regime and our king."
 UKR_Rightist_Government:0 "'ViN' and 'OUN' Commence Reforms"
-UKR_Rightist_Government_desc:0 "Members of 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' have begun to replace old officials of the Hetman`s period in the regions. Surprisingly, it has had a positive effect on our economy, because new local governments are ready to solve problems of their towns and villages."
+UKR_Rightist_Government_desc:0 "Members of 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' have begun to replace old officials of the Hetman's period in the regions. Surprisingly, it has had a positive effect on our economy, because new local governments are ready to solve problems of their towns and villages."
 UKR_ViN_Russophiles:0 "Church and Nation"
 UKR_ViN_Russophiles_desc:0 "It seems, that Mikhail Bulgakov with the help of 'ViN' has finally found a proper decision, which allow him to solve the land question. The Ukrainian Church, which is a part of the Russian Orthodox Church will sell the unused lands to the peasants, but the Orthodoxy will be recognised as the state religion in Ukraine."
-UKR_OUN_Nationalists:0 "Сonfiscate the Land"
+UKR_OUN_Nationalists:0 "Confiscate the Land"
 UKR_OUN_Nationalists_desc:0 "Lots of Polish landlords control many lands in the Western and Central Ukraine. Since Poland is weak now, we can easily confiscate their estates, expel these Poles and redistribute their lands among the Ukrainian peasants."
 UKR_Abolish_Law:0 "Recognising Russian as the Official Second Language"
 UKR_Abolish_Law_desc:0 "One of the biggest problems, which exists in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but its usage is prohibited in the state institutions. 'ViN' has always opposed this prohibition and thus it is with great pleasure that Mikhail Bulgakov now is able to abolish this language law."
