GER: Ich habe fertig

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -4,14 +4,14 @@
 ### Foci ###
 GER_doctrine_new:0 "Military Reform"
 GER_doctrine_new_desc:0 "After the death of Hans von Seeckt and the retirement of August von Mackensen, the Chief of General Staff has been involved in constant debate over which methods the German Army should use as a tactical basis, or doctrine."
-GER_doctrine_great_war:0 "Trench Weaponry"
-GER_doctrine_great_war_desc:0 "The Weltkrieg was won in the trenches. The core part of any army for the last two hundred years has been artillery and infantry, and so it shall remain!"
-GER_doctrine_great_war_2:0 "Weltkrieg School"
-GER_doctrine_great_war_2_desc:0 "By expanding on lessons learned during the Weltkrieg we can improve our military strategy."
-GER_doctrine_mobile:0 "Motorised Divisions"
-GER_doctrine_mobile_desc:0 "While a machine-gun nest and a trench is almost impassable to infantry, panzers have shown that modern war need not be stale and immobile. While we should lean back on a large infantry army, armoured fists should be utilised to tear enemy lines apart."
-GER_doctrine_mobile_2:0 "Mobility School"
-GER_doctrine_mobile_2_desc:0 "Swift manoeuvres, encircling and cutting off pockets of resistance is the way of the future. Motorised infantry can reach tactically important locations in days where traditional infantry would need weeks. The trenches of the Weltkrieg are a thing of the past. For good."
+GER_doctrine_great_war:0 "Squad Tactics"
+GER_doctrine_great_war_desc:0 ""
+GER_doctrine_great_war_2:0 "The modern Art of War"
+GER_doctrine_great_war_2_desc:0 ""
+GER_doctrine_mobile:0 "Motorised Infiltration"
+GER_doctrine_mobile_desc:0 ""
+GER_doctrine_mobile_2:0 "A new Doctrine"
+GER_doctrine_mobile_2_desc:0 ""
 GER_doctrine_mobile_3:0 "Invest in Panzer Factories"
 GER_doctrine_mobile_3_desc:0 "With a little directed investment, we could raise productivity of our armour factories by quite a lot. Some of our more conservative-minded generals will not approve of this investment, though."
 
@@ -109,27 +109,33 @@ GER_Infantry_divs_desc:0 "While the German army has the greatest soldiers in the
 GER_political_1:0 "Imperial Restructuring"
 GER_political_1_desc:0 "While it is undeniable the German empire is the greatest nation to ever grace the pages of history, there is always room for improvement. In light of recent 'shortcomings' of our policies we should look into various changes and reforms we can make for a better future."
 GER_black_monday_aftermath:0 "The Aftermath of Black Monday"
-GER_black_monday_desc:0 "The great crash of 1936, widely known as the 'Black Monday' has had a massive impact on German politics, culture, and society. While the damage might never be fixed, we should enact reforms and recovery policies to regain some of our lost capacity."
-GER_mil_industry_1:0 "Stuff"
-GER_mil_industry_1_desc:0 ""
-GER_mil_industry_2:0 "Happens"
+GER_black_monday_aftermath_desc:0 "The great stock market crash of 1936, widely known as 'Black Monday', has already had a massive impact on German politics, culture, and society. While the damage might never be fixed, we should enact reforms and recovery policies to regain some of our lost capacity."
+GER_mil_industry_1:0 "PEkI I"
+GER_mil_industry_1_desc:0 "Programm für die Erweiterung kriegswichtiger Industrien"
+GER_mil_industry_2:0 "PEkI II"
 GER_mil_industry_2_desc:0 ""
-GER_mil_industry_3:0 "Yay"
+GER_mil_industry_3:0 "PEkI III"
 GER_mil_industry_3_desc:0 ""
-GER_civ_industry_1:0 "Even"
-GER_civ_industry_1_desc:0 ""
-GER_civ_industry_2:0 "More"
+GER_civ_industry_1:0 "ZIP I"
+GER_civ_industry_1_desc:0 "Zivilindustrialisierungsplan I"
+GER_civ_industry_2:0 "ZIP II"
 GER_civ_industry_2_desc:0 ""
-GER_civ_industry_3:0 "Stuff"
+GER_civ_industry_3:0 "ZIP III"
 GER_civ_industry_3_desc:0 "With our civilian industry once again strong, but not yet booming, we are required to take just a few more steps. Soon enough German industry will tower above the rest of the world once more, as the steady influx of resources from the colonies assures a massive production boost."
-GER_industry_finished:0 "Full Recovery"
-GER_industry_finished_desc:0 "After years of economic failure and crisis, the German industry have finally recovered! We can once again finally compete with the rest of the world! \n Thank God for Schacht and Groener!"
+GER_industry_finished:0 "Economic boom"
+GER_industry_finished_desc:0 ""
+GER_economy:0 "The State of the Economy"
+GER_economy_desc:0 "It's good, really. The industry is humming along, the grain is coming in from the eastern member states of Mitteleuropa, many citizens have work. It's looking up for the Kaiserreich, and the golden age of Tirpitz seems endless..."
 GER_research_expansion:0 "Extra Research Funding"
 GER_research_expansion_desc:0 "Let us invest in science and technology to stimulate advances in both military and civilian affairs."
 GER_ig_farben:0 "Invest In IG Farben"
 GER_ig_farben_desc:0 "We can invest in IG Farben, a pharmaceuticals company currently researching ways to synthesise various chemical compounds that might prove useful to our interests."
-GER_krupp:0 "Krupp Projects"
+GER_krupp:0 "Friedrich Krupp AG Monopoly"
 GER_krupp_desc: "The Krupp dynasty is an almost 400-year-old Dynasty of Industrious Germans, who has fed the German war machine ever since the Thirty Years' War! It is time we put them in state employment again, as their talents will be badly needed with a new Weltkrieg on the horizon."
+GER_artillery_research:0 "Artillery research"
+GER_artillery_research_desc:0 ""
+GER_doctrine_armor:0 "Armored breakthrough"
+GER_doctrine_armor_desc:0 ""
 GER_hahn_meitner:0 "Hahn & Meitner"
 GER_hahn_meitner_desc:0 "Herr Hahn and Fräulein Meitner are both extremely talented physicists, Hahn discovered nuclear isomerism and Meitner is a department head at the Kaiser Wilhelm Institute! Together we believe the two can help create extremely powerful tools for society. And even more powerful weapons."
 GER_zuse:0 "Konrad Zuse"
@@ -147,6 +153,14 @@ GER_schacht1:0 "Bail out Junker Estates"
 GER_schacht1_desc:0 ""
 GER_schacht2:0 "Investitionsprogramm"
 GER_schacht2_desc:0 ""
+GER_schacht3:0 "Approach Poland"
+GER_schacht3_desc:0 ""
+GER_mitteleuropa:0 "One currency for Mitteleuropa"
+GER_mitteleuropa_desc:0 ""
+GER_synthetic:0 "Research in Synthetics"
+GER_synthetic_desc:0 ""
+GER_experimental_research:0 "Experimental research"
+GER_experimental_research_desc:0 ""
 GER_black_monday_finish:0 "Finish Black Monday reforms"
 GER_black_monday_finish_desc:0 ""
 GER_pathfinders:0 "Organise the Youth"
@@ -200,6 +214,12 @@ GER_restore_country_rights:0 "Restore the Bundesrat"
 GER_restore_country_rights_desc:0 ""
 GER_babelsberg:0 "Expand Babelsberg"
 GER_babelsberg_desc:0 ""
+GER_siemens:0 "Subsidies for Siemens"
+GER_siemens_desc:0 ""
+GER_infra_1:0 "New Locomotives"
+GER_infra_1_desc:0 ""
+GER_infra_2:0 "Rebuild railway tracks"
+GER_infra_2_desc:0 ""
 
 ### Domestic Events ###
 
@@ -940,13 +960,33 @@ gerfla.8.t:0 "Tenth anniversary of von Tirpitz' death"
 gerfla.8.d:0 "Today is the tenth anniversary of the death of the Great Chancellor and Admiral Alfred von Tirpitz. As the eight Chancellor and Commander of the German Navy Tirpitz led the Kaiserreich out of the Ludendorff dictatorship, initiating the Golden Age that lasted through the Twenties until his death. \n\nAfter his death, his Deutsche Vaterlandspartei (German Fatherland party, DVLP), reformed into the Junker party it is today under their new leader, Alfred Hugenberg, opening the way for the von Papen's Deutschkonservative Partei (German Conservative Party, DKP). And while the Reich enjoyed prosperity under his reign, he also continued o hold off on fulfilling the Kaiser's Easter Promises from 1917, leaving us with some troubles in the past years. \n\nStill, his prestige is enormous, and the anniversary of his death has been accompanied by public demonstrations of respect all across the Empire."
 gerfla.8.a:0 "And what a giant he was!"
 
+### Mitteuropa Events ###
+
+germit.1.t:0 "A German proposal"
+germit.1.d:0 "In light of the consequences of Black Monday, the German government has come up with a somewhat strange proposal. In order to meaningfully increase and simplify commerce and trade across Mitteleuropa, they propose that the German currency, the Mark, should become an accepted currency in all Mitteleuropean countries.\n\nIn many of Germanies 'subject partner' states, the currencies are tied to the Mark already, so the actual change would remain minimal. What should we answer to this proposal?"
+germit.1.a:0 "Count us in!"
+germit.1.b:0 "'Subject partner', eh?"
+germit.1.c:0 "Oh blimey, surely not!"
+
+germit.2.t:0 "[From.GetName] will use the Mark"
+germit.2.d:0 "[From.GetName] has agreed to our proposal of a common currency for Mitteleuropa and will use the Reichsmark from now on."
+germit.2.a:0 "Wonderful!"
+
+germit.3.t:0 "[From.GetName] will not use the Mark"
+germit.3.d:0 "[From.GetName] has not agreed to our proposal of a common currency for Mitteleuropa and will continue to use their own currency, albeit still connected to the Reichsmark."
+germit.3.a:0 "Scheiße!"
+
+germit.4.t:0 "Mark abolished"
+germit.4.d:0 "In light of the recent developments, the Mark is no longer our official currency. This will cause some economic upheaval, but will ultimately be to our best."
+germit.4.a:0 "Let's hope so..."
+
 ### Ideas ###
 black_guarantee:0 "Guaranteed holdings of private individuals"
 GER_black_monday:0 "Black Monday"
 GER_black_monday1:0 "Schachtplan"
 GER_black_monday2:0 "Grönerplan"
 german_eco_finished:0 "Economic Boost"
-german_eco_finished:0 "Our economy has received new incentives, many has begun to flow. While it will not hold forever, for a time we should have something of a bonus on our hands."
+german_eco_finished:0 "Our economy has received new incentives, money has begun to flow. While it will not hold forever, for a time we should have something of a bonus on our hands."
 GER_bunkrupt_fact:0 "An important industrial corporation declared bankruptcy"
 DCGB:0 "Deutscher-Christlicher Gewerkschaftsbund"
 GER_rhine_unrest:0 "Workers' Strike"
@@ -966,6 +1006,7 @@ GER_bundesrat_idea:0 "Restored Bundestag"
 GER_post_idea:0 "German Post Office"
 GER_embrace_faud_idea:0 "Freie Arbeiterunion Deutschlands"
 DCGB:0 "Deutscher Christlicher Gewerkschaftsbund"
+GER_institut_idea:0 "Institut für Luftfahrttechnik"
 
 ### Tooltips ###
 GER_mackensen_retires:0 "You can now reform the military command"
@@ -995,6 +1036,7 @@ GER_halbstarke:0 "Problems with Halbstarke"
 navy_1934_complete:0 "1934 Navy Program completed"
 GER_parlamentsvertrauen_tp:0 "Election results will determine governments."
 GER_disband_reichstag_tp:0 "Elections will not be held."
+GER_cult_of_aviation_tp:0 "Our pilots will bring themselves to their very limits."
 
 ### Opinion Modifiers ###
 sri_lanka:0 "Imperialist Bastard"
@@ -1016,6 +1058,7 @@ return_wll:0 "Returned Wallonia"
 wll_int:0 "Snubbed us"
 give_holl:0 "The Holland Award"
 occupy_mor:0 "Occupation of Morocco"
+polish_deal_op:0 "Economic Deal"
 
 ### Companies ###
 krupp:0 "Krupp"
