* added name for Italian North Africa
* added name for Italian Tunisia
* added a few more Indian victory points
* adjusted some development levels for Indian states

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1582,6 +1582,13 @@
  SAF_republic_totalist:0 "Cape Commune"
  SAF_republic_totalist_ADJ:0 "South African"
  SAF_republic_totalist_DEF:0 "the Cape Commune"
+ 
+ LYB_ITA_subject:0 "Italian North Africa"
+ LYB_ITA_subject_DEF:0 "Italian North Africa"
+ LYB_ITA_subject_ADJ:0 "Libyan"
+ 
+ TUN_subject:0 "$OVERLORDADJ$ Tunisia"
+ TUN_subject_DEF:0 "$OVERLORDADJ$ Tunisia"
 
 ##############
 #Vanilla
