--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -79,6 +79,7 @@
  VICTORY_POINTS_1349:0 "Bombay"
  VICTORY_POINTS_1403:0 "Morlamaeng" #Moulmein
  VICTORY_POINTS_1408:0 "Vancouver"
+ VICTORY_POINTS_1409:0 "Madurai"
  VICTORY_POINTS_1415:0 "Dagupan"
  VICTORY_POINTS_1440:0 "San Juan"
  VICTORY_POINTS_1459:0 "Tashkent"
@@ -381,6 +382,7 @@
  VICTORY_POINTS_7408:0 "Krungthep Maha Nakhon" #Bangkok
  VICTORY_POINTS_7418:0 "Xi'an"
  VICTORY_POINTS_7427:0 "Malakka" #Malacca
+ VICTORY_POINTS_7447:0 "Cochin"
  VICTORY_POINTS_7480:0 "Mobile"
  VICTORY_POINTS_7500:0 "Rosario"
  VICTORY_POINTS_7520:0 "Newcastle"
@@ -677,6 +679,7 @@
  VICTORY_POINTS_12738:0 "Managua"
  VICTORY_POINTS_12747:0 "Bolama"
  VICTORY_POINTS_12758:0 "Medine"
+ VICTORY_POINTS_12763:0 "Peshawar"
  VICTORY_POINTS_12766:0 "Asmara"
  VICTORY_POINTS_12782:0 "San Antonio"
  VICTORY_POINTS_12790:0 "Cartagena"
