More work on the USA

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -27,13 +27,16 @@ HAW_multi_culturalism:0 "Multiculturalism"
 HAW_multi_culturalism_desc:0 ""
 HAW_hawaiian_revolution:0 "Hawaiian Revolution"
 HAW_hawaiian_revolution_desc:0 ""
+HAW_direct_democracy:0 "Direct Democracy"
+HAW_direct_democracy_desc:0 ""
 HAW_pinapple_union:0 "Pineapple Union"
 HAW_pinapple_union_desc:0 ""
 HAW_socialist_education:0 "Socialist Education"
 HAW_socialist_education_desc:0 ""
 HAW_peoples_victory:0 "People's Victory"
 HAW_peoples_victory_desc:0 ""
-
+HAW_constitution:0 "Hawaii's Constitution"
+HAW_constitution_desc:0 ""
 ### Economy Foci ###
 HAW_building_our_economy:0 "Building Our Economy"
 HAW_building_our_economy_desc:0 ""
