--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2745,36 +2745,36 @@
  NFA_totalist_ADJ:0 "French"
  NFA_totalist_DEF:0 "French Commune"
 
- NFG_authoritarian_democrat:0 "North German Federation"
- NFG_authoritarian_democrat_ADJ:0 "North German"
- NFG_authoritarian_democrat_DEF:0 "the North German Federation"
- NFG_market_liberal:0 "North German Federation"
- NFG_market_liberal_ADJ:0 "North German"
- NFG_market_liberal_DEF:0 "the North German Federation"
- NFG_national_populist:0 "North German Federation"
- NFG_national_populist_ADJ:0 "North German"
- NFG_national_populist_DEF:0 "the North German Federation"
- NFG_paternal_autocrat:0 "North German Federation"
- NFG_paternal_autocrat_ADJ:0 "North German"
- NFG_paternal_autocrat_DEF:0 "the North German Federation"
- NFG_radical_socialist:0 "North German Union"
- NFG_radical_socialist_ADJ:0 "North German"
- NFG_radical_socialist_DEF:0 "the North German Union"
- NFG_social_conservative:0 "North German Federation"
- NFG_social_conservative_ADJ:0 "North German"
- NFG_social_conservative_DEF:0 "the North German Federation"
- NFG_social_democrat:0 "North German Federation"
- NFG_social_democrat_ADJ:0 "North German"
- NFG_social_democrat_DEF:0 "the North German Federation"
- NFG_social_liberal:0 "North German Federation"
- NFG_social_liberal_ADJ:0 "North German"
- NFG_social_liberal_DEF:0 "the North German Federation"
- NFG_syndicalist:0 "North German Union"
- NFG_syndicalist_ADJ:0 "North German"
- NFG_syndicalist_DEF:0 "the North German Union"
- NFG_totalist:0 "North German Union"
- NFG_totalist_ADJ:0 "North German"
- NFG_totalist_DEF:0 "the North German Union"
+ NGF_authoritarian_democrat:0 "North German Federation"
+ NGF_authoritarian_democrat_ADJ:0 "North German"
+ NGF_authoritarian_democrat_DEF:0 "the North German Federation"
+ NGF_market_liberal:0 "North German Federation"
+ NGF_market_liberal_ADJ:0 "North German"
+ NGF_market_liberal_DEF:0 "the North German Federation"
+ NGF_national_populist:0 "North German Federation"
+ NGF_national_populist_ADJ:0 "North German"
+ NGF_national_populist_DEF:0 "the North German Federation"
+ NGF_paternal_autocrat:0 "North German Federation"
+ NGF_paternal_autocrat_ADJ:0 "North German"
+ NGF_paternal_autocrat_DEF:0 "the North German Federation"
+ NGF_radical_socialist:0 "North German Union"
+ NGF_radical_socialist_ADJ:0 "North German"
+ NGF_radical_socialist_DEF:0 "the North German Union"
+ NGF_social_conservative:0 "North German Federation"
+ NGF_social_conservative_ADJ:0 "North German"
+ NGF_social_conservative_DEF:0 "the North German Federation"
+ NGF_social_democrat:0 "North German Federation"
+ NGF_social_democrat_ADJ:0 "North German"
+ NGF_social_democrat_DEF:0 "the North German Federation"
+ NGF_social_liberal:0 "North German Federation"
+ NGF_social_liberal_ADJ:0 "North German"
+ NGF_social_liberal_DEF:0 "the North German Federation"
+ NGF_syndicalist:0 "North German Union"
+ NGF_syndicalist_ADJ:0 "North German"
+ NGF_syndicalist_DEF:0 "the North German Union"
+ NGF_totalist:0 "North German Union"
+ NGF_totalist_ADJ:0 "North German"
+ NGF_totalist_DEF:0 "the North German Union"
 
  NIC_authoritarian_democrat:0 "United Provinces of America"
  NIC_authoritarian_democrat_ADJ:0 "United Provincial"
