Moved some stuff around in the Polish focus tree.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -82,7 +82,7 @@ POL_new_trade_opportunities:0 "New Naval Officers"
 POL_join_mitteleuropa:0 "Join Mitteleuropa"
 POL_german_advisors:0 "Invite German Advisers"
 POL_join_economic_bloc:0 "The European Economic Bloc"
-POL_german_tech_sharing:0 "German Technology Sharing"
+POL_german_tech_sharing:0 "The Kaiser Wilhelm Society"
 POL_the_entente:0 "The Entente"
 POL_russian_support:0 "Look to Russia"
 POL_naval_interdiction:0 "Naval Interdiction Strategies"
@@ -183,7 +183,7 @@ POL_new_trade_opportunities_desc:0 "New Naval Officers"
 POL_join_mitteleuropa_desc:0 "Join Mitteleuropa"
 POL_german_advisors_desc:0 "Invite German Advisers"
 POL_join_economic_bloc_desc:0 "The European Economic Bloc"
-POL_german_tech_sharing_desc:0 "German Technology Sharing"
+POL_german_tech_sharing_desc:0 "The Kaiser Wilhelm Society"
 POL_the_entente_desc:0 "The Entente"
 POL_russian_support_desc:0 "Look to Russia"
 POL_naval_interdiction_desc:0 "Naval Interdiction Strategies"
@@ -262,6 +262,10 @@ POL_polish_king_desc:0 "A True Polish King!"
 POL_reincorporate_lithuania_desc:0 "Reincorporate Lithuania"
 POL_line_of_succession_desc:0 "A Clear Line of Succession"
 POL_join_international_community_desc:0 "Join the International Community"
+POL_steelworks:0 "Scheibler and Grohman Works"
+POL_steelworks_desc:0 "Scheibler and Grohman Works"
+POL_entente_technology:0 "Entente Technology"
+POL_entente_technology_desc:0 "Entente Technology"
 
 POL_mendog_iii:0 "A Lithuanian King!"
 POL_mendog_iii_desc:0 "A Lithuanian King!"
@@ -992,3 +996,6 @@ POL_central_forts:0 "gains moderate defensive infrastructure."
 POL_RAD:0 "Karol Radek leads Poland"
 POL_ROZA:0 "Roza Luksemburg leads Poland"
 POL_JAKUB:0 "Jakub Hanecki leads Poland"
+
+### Research ###
+german_research_name:0 "Kaiser Wilhelm Society"
