Template for new Mexico tree

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -22,8 +22,8 @@ MEX_Relig:0 "Religious Unity"
 ### Parties ###
 MEX_social_democrat_party:0 "PRI"
 MEX_social_democrat_party_long:0 "Partido Revolucionario Institucional"
-MEX_syndicalist_party:0 "Villistas"
-MEX_radical_socialist_party:0 "Zapatistas"
+MEX_syndicalist_party:0 "Zapatistas"
+MEX_radical_socialist_party:0 "Villistas"
 MEX_paternal_autocrat_party:0 "MJ"
 MEX_paternal_autocrat_party_long:0 "Military Junta"
 MEX_totalist_party:0 "Totalistas"
@@ -372,85 +372,81 @@ mexico.105.d:0 "After many years of extensive resettlement, intensive propaganda
 mexico.105.a:0 "Finally!"
 
 ### Foci ###
-MEX_Mexican_Socialism:0 "Mexican Socialism"
-MEX_Mexican_Socialism_desc:0 "The new President has declared that the only way forward is for Mexico to develop its own type of Socialism"
-MEX_Empower_Ejidos:0 "Empower the Ejidos"
-MEX_Empower_Ejidos_desc:0 "The Ejidos, which an area of communal land used for agriculture, greatly strengthen our country, giving more power to the Ejidos is a great way to institute Socialism in Mexico"
-MEX_Expand_Industry:0 "Expand Industry"
-MEX_Expand_Industry_desc:0 "Mexico must expand its industrial capacity if it wants to achieve Socialism"
-MEX_New_Factories:0 "New Factories"
-MEX_New_Factories_desc:0 "New Factories are extremely important to expanding Mexico's industry and economy"
-MEX_Expand_Agriculture:0 "Expand Agriculture"
-MEX_Expand_Agriculture_desc:0 "Mexico could easily become a world centre of agriculture, it is time we invest in it."
-MEX_Feed_The_World:0 "Feed the World"
-MEX_Feed_The_World_desc:0 "The demand in the world for agriculture is great, Mexico will become the new granary of the world"
-MEX_Feed_Mexico:0 "Feed Mexico"
-MEX_Feed_Mexico_desc:0 "We must feed and maintain our own growing population, our newfound agricultural strength will be used on our population."
-MEX_Expand_Ejidos:0 "Expand the Ejidos"
-MEX_Expand_Ejidos_desc:0 "The Ejidos have proven successful in improving the life of our population, it is time to expand them further."
-MEX_Socialist_Science:0 "Socialist Science"
 MEX_Embrace_Totalism:0 "Embrace Totalism"
-MEX_Embrace_Totalism_desc:0 "In 1936 Oswald Mosely, a noted British politician, published the "Totalist charter" - a small book detailing his proposed innovation to socialism - Totalism. Totalism promotes the role of the state and the nation in the socialist struggle and urges violent expansion of the revolution, while discarding the Marxist ideals of democracy and statelessness. Our own presidente, senior Calles is a staunch supporter of many of these tenets, but has not yet officially joined the international totalist movement. Shall we approach them with a formal application?"
-MEX_Control_the_Ejidos:0 "Control The Ejidos"
-MEX_Control_the_Ejidos_desc:0 "Our president has decided to take a closer look on the land reform programmes initiated by Emiliano Zapata. Although they have brought many important results, he believes that handing too much power to the peasants has led to major inefficiency for the ejidos. Some ministers have now proposed that the ejidos must face state intervention and that all agricultural production must be directed by the state itself."
-MEX_Establish_the_Maximato:0 "Establish the Maximato"
-MEX_Establish_the_Maximato_desc:0 "As the president has officially endorsed the Totalist ideology, his authoritarian desires have become more explicit. According to his closer advisers, he plans to officially dissolve the Mexican Constitution of 1917, dissolve the Senate and concentrate all political power of Mexico in his hands! This 'Maximato', according to him, would be a new form of government, ensuring the proper application of socialist policies for the good of Mexico."
-MEX_Republican_Guard:0 "Republican Guard"
-MEX_Republican_Guard_desc:0 "Our President has declared that Mexico needs a special force, to guard our revolutionary socialist ideals and our great republic."
+MEX_Establish_the_Maximato:0 "Establish The Maximato"
+MEX_Crack_Down_On_Strikes:0 "Crack Down On Strikes"
 MEX_State_Atheism:0 "State Atheism"
-MEX_State_Atheism_desc:0 "Our president is a known militant atheist and an opponent of the Catholic Church. Over the past months, he and his close advisers have begun to move to enforce the anti-clerical articles of the Mexican Constitution of 1917 — including provisions such as depriving the Church of its property rights and depriving the clergy of a number of civil liberties."
 MEX_New_Education_System:0 "New Education System"
-MEX_New_Education_System_desc:0 "The expropriation of the Church-run schools and universities and their replacement by a secular curriculum has borne its first fruits. By purging our academics of religious influence, the performance of our research is improving!"
-MEX_Expand_Intel:0 "Expand the Intelligence"
-MEX_Expand_Intel_desc:0 "El Presidente has declared that he will be expanding Mexico's intelligence agency to better protect our Socialist Republic from both internal and external enemies"
-MEX_Additional_Industrialisation:0 "Additional Industrialisation"
+MEX_Republican_Guard:0 "Republican Guard"
+MEX_Expand_Intel:0 "Expand The Intelligence"
+MEX_Control_the_Ejidos:0 "Take Control Of The Ejidos"
 MEX_Military_Industrialisation:0 "Military Industrialisation"
-MEX_Modernise_The_Ejidos:0 "Modernise the Ejidos"
-MEX_Modernise_The_Ejidos_desc:0 "Now that the Ejidos are under government control, we need to modernise them and give the peasants new mechanised tools to farm with. This will increase production in the Ejidos massively"
-MEX_Nationalisation:0 "Nationalisation"
-MEX_Nationalisation_desc:0 "The foreign companies in Mexico have had it too good for too long, and we should have nationalised the industry long ago. This would be a big step into becoming more than everyone else's piñata, so to speak."
-MEX_Storm_The_Rigs:0 "Storm the Rigs"
-MEX_Storm_The_Rigs_desc:0 "Oil here in Mexico is abundant, yet most of our people still use lumber to keep their ovens running, Storm the rigs! They belong to Mexico!"
-MEX_A_New_Mexico:0 "A New Mexico"
-MEX_A_New_Mexico_desc:0 "Mexico has been socialist for close to 30 years now, now that the government is no longer revolutionary, it is time to steer Mexico towards a different path."
-MEX_Dissolve_The_Ejidos:0 "Dissolve The Ejidos"
-MEX_Dissolve_The_Ejidos_desc:0 "Our new government has consolidated its control of Mexico, thanks to a huge support of the conservative bourgeoisie. Now, in order to appease these classes, we must work to dissolve many of the Zapatista institutions and socialist policies — a good place to start would be scrapping the land reform programmes and returning most of the lands to their former owners, the grand hacienderos."
-MEX_A_New_Economy:0 "A New Economy"
-MEX_A_New_Economy_desc:0 "As we continue to destroy the socialist institutions, we must reform our economical policies. Should we take a laissez-faire approach as the Mexican elites propose and let the free hand of capitalism do her work? Or maybe it would be better if the state were to maintain a certain amount of control over the economy — a dirigist approach?"
-MEX_Free_Market:0 "A Free Market"
-MEX_Free_Market_desc:0 "We must choose to adopt the succesful free market policies of rich countries such as the Estados Unidos"
-MEX_Privatisation:0 "Privatisation"
-MEX_Privatisation_desc:0 "After we decided to follow a free-market approach to our economy, our Ministry of Industry has produced a report on a number of state-owned industries that should be privatised. After all, the private initiative would do a better job keeping them running than some bureaucrat in Mexico City, right? Some within our government, however, believe that the state must retain ownership of certain key industries…"
-MEX_State_Control:0 "State Control"
-MEX_State_Control_desc:0 "Our state must be able to direct our economy towards important things, state control and regulation must be enforced."
-MEX_Regulation:0 "Regulation"
-MEX_Regulation_desc:0 "Now that we have chosen state control over the economy, we must start enforcing new laws of regulation upon Mexico's companies"
-MEX_Repeal_Anti_Clericism:0 "Repeal Anti Clerical Policies"
-MEX_Repeal_Anti_Clericism_desc:0 "Since the signing of the Mexican Constitution of 1917, the Roman Catholic clergy has been deprived of a number of civil rights, such as the right to vote and own property. Not only that, the Church itself was persecuted, with local parishes shut, religious education suppressed, monasteries looted and even traditional religious feasts prohibited. Since our new government has come to power, these persecutions have been much relaxed. However, it is time to officially repeal these anti-clerical articles of our constitution!"
-MEX_University:0 "Papal University"
-MEX_University_desc:0 "Thanks to our repelling of the anti-clerical legislation, the Roman Catholic Church has opened a new university in our country: the Universidad Pontificia de México!"
-MEX_New_Allies_For_The_Regime:0 "New Allies for the Regime"
-MEX_New_Allies_For_The_Regime_desc:0 "In order to further consolidate our rule, we are pressed to look for new allies among the traditional ruling classes of Mexico. Should we seek renewed support from the rich industrialists, or the old aristocratic hacienderos? There's also talk that some within our government would like to seek further support from the Sinarquistas, Mexico's own nationalist and populist movement."
-MEX_Haciendros:0 "Haciendros"
-MEX_Haciendros_desc:0 "The traditional hacienderos will support us"
-MEX_Reduce_Unemployment:0 "Reduce Unemployment"
-MEX_Reduce_Unemployment:0 "Thanks to our good relationship with the hacienderos, their great ranches have caused our unemployment rates to fall drastically."
-MEX_Great_Ranches:0 "Great Ranches"
-MEX_Agricultural_Boom:0 "Agricultural Boom"
-MEX_Industrialists:0 "Industrialists"
-MEX_Industrialists_desc:0 "Seek support from the industrialists"
+MEX_Mexican_Cars:0 "Mexican Automobile Industry"
+MEX_Modernise_The_Ejidos:0 "Modernise The Ejidos"
+MEX_Steel_Production:0 "Construct Steel Factories"
+MEX_Industrial_Mobilization:0 "Industrial Mobilzation"
+MEX_Nationalise_Oil:0 "Nationalise The Oil Industry"
+MEX_Legacy_Of_Zapata:0 "Legacy Of Zapata"
+MEX_Mexican_Socialism:0 "Mexican Socialism"
+MEX_Empower_Ejidos:0 "Empower The Ejidos"
+MEX_Agricultural_Economy:0 "Agrarian Economy"
+MEX_Feed_The_Cities:0 "Feed The Cities"
+MEX_Develop_Natural_Resources:0 "Develop Natural Resources"
+MEX_Increase_Exports:0 "Increase Exports"
+MEX_Expand_Ejidos:0 "Expand Ejidos"
+MEX_Improve_Conditions:0 "Improve Working Conditions"
+MEX_Native_Aut:0 "Native Autonomies"
+MEX_Ejido_Militias:0 "Ejido Militias"
+MEX_Adopt_Syndicalism:0 "Adopt Syndicalism"
+MEX_Empower_Unions:0 "Empower The Unions"
+MEX_Encourage_Urbanization:0 "Encourage Urbanization"
+MEX_Union_Ejido_Coop:0 "Union-Ejido Cooperation"
+MEX_Improve_Union_Management:0 "Improve Union Management"
 MEX_Build_New_Factories:0 "Build New Factories"
-MEX_Build_New_Factories_desc:0 "Our Ministry of Economy has announced that the country has entered a new period of economic expansion! No doubt, this has to do with our good relationship with the industrial leaders of Mexico and our mature fiscal environment. This, combined to our tough hand in dealing with trade unions and other destabilising elements, has allowed our industrial output to increase."
-MEX_Foreign_Investment:0 "Foreign Investment"
+MEX_Establish_The_CTM:0 "Establish The CTM"
+MEX_Teacher_Union:0 "Teacher's Union Demands"
+MEX_Railway_Union:0 "Railway Worker's Union Demands"
+MEX_Miner_Union:0 "Miner's Union Demands"
+MEX_Seize_Industry:0 "Seize Foreign Industries"
+MEX_Storm_The_Rigs:0 "Storm The Rigs"
+MEX_Socialist_Science:0 "Socialist Science"
+MEX_Moderate_Victory:0 "Moderate Victory"
+MEX_Cardenas_Land_Reform:0 "Land Reform"
+MEX_Guarentee_Rights:0 "Guarentee Worker's Rights"
+MEX_Improve_Transportation_System:0 "Improve Transportation System"
+MEX_Compromise_With_The_Church:0 "Compromise With The Church"
+MEX_Rural_Education:0 "Rural Education"
+MEX_Compromise_With_The_Radicals:0 "Compromise With The Radicals"
+MEX_Improve_Native_Conditions:0 "Improve Native Conditions"
+MEX_Found_The_Nacional_Financiera:0 "Found The Nacional Financiera"
+MEX_Found_The_Instituto_Politecnico_Nacional:0 "Found The Instituto Politecnico Nacional"
+MEX_Ensure_Oil_Control:0 "Ensure Control Over Oil"
+MEX_A_New_Mexico:0 "A New Mexico"
+MEX_Purging_The_Reds:0 "Purging The Reds"
+MEX_Dissolve_The_Ejidos:0 "Dissolve The Ejidos"
+MEX_Restructuring_The_Regime:0 "Restructuring The Regime"
+MEX_Keep_Junta:0 "Keep The Junta"
+MEX_Capitalist_Junta:0 "A Capitalist Junta"
+MEX_Free_Market:0 "Institute A Free Market"
+MEX_Privatisation:0 "Privatisation"
+MEX_Foreign_Investment:0 "Encourage Foreign Investment"
 MEX_Economic_Boom:0 "Economic Boom"
-MEX_Sinarquistas:0 "Sinarquistas"
-MEX_Sinarquistas_desc:0 "The Sinarquistas are a new force worth reckoning"
-MEX_Establish_The_Goldshirts:0 "The Goldshirts"
-MEX_Establish_The_Goldshirts_desc:0 "Our partners of the Sinarquista movement have ordered their paramilitaries, the Camisas Doradas (Goldshirts) on a night of rampage. Over last night, their thugs have attacked a number of syndicalist organisations, such as trade unions and cultural centres, destroyed a number of muralist works of art in Mexico City, and invaded the homes of known socialists. These actions will, of course, help demobilise any existing opposition to our regime but, at the same time, some feel that these extremist measures will do us much harm on the long run.
-MEX_Restore_The_Monarchy:0 "Restore the Monarchy"
-MEX_Restore_The_Monarchy_desc:0 "Our country already has been a monarchy in two distinct periods. The First Mexican Empire, proclaimed just after the independence from Spain, lasted under Agustín I from 1821 to 1823. The, the Second Empire, imposed by the occupying French forces of Napoleon III, survived from 1864 to 1867 under the rule of Maximilian I, an Austrian Habsburg archduke. Ever since the Sinarquistas have established their new nationalist regime, some fringe groups have started advocating for the restoration of monarchy in Mexico under a devout Catholic monarch. These groups have slowly gaining more and more support both among the political classes, to the point that on today's session of the Senate, sinarquista senator Manuel Torres Bueno has openly proposed a Third Mexican Empire to be instituted. Of course, most of our population is happy to live under a republic and would strongly oppose this scheme.
+MEX_Traditionalist_Junta:0 " A Traditionalist Junta"
+MEX_Repeal_Anti_Clericism:0 "Repeal Anti Clericism"
+MEX_Great_Ranches:0 "Great Ranches"
+MEX_Promote_Traditonal_Values:0 "Promote Traditional Values"
+MEX_Agricultural_Boom:0 "Agricultural Boom"
+MEX_Restore_The_Monarchy:0 "Restore The Monarchy"
+MEX_The_New_Aristocracy:0 "The New Aristocracy"
 MEX_Sinarquist_Coup:0 "Sinarquist Coup"
-MEX_Sinarquist_Coup_desc:0 "The Sinarquistas have been gaining more and more power ever since we indicted them into our government, some people are warning us that they might be planning a coup against the current regime, but that can't be true, can it?"
+MEX_Establish_The_Goldshirts:0 "Establish The Goldshirts"
+MEX_Deals_With_Capitalists:0 "Deals With Capitalists"
+MEX_Nationalise_Industry:0 "Nationalise Industry"
+MEX_Establish_Corporatism:0 "Establish Corporatism"
+MEX_Catholic_State:0 "Catholic State"
+MEX_Sinarquist_Youth:0 "Establish The Juventudes Sinarquistas"
+MEX_University:0 "Papal University"
+
 MEX_Military_Reforms:0 "Military Reforms"
 MEX_Invest_In_Infantry:0 "Invest in Infantry"
 MEX_Modernise_The_High_Command:0 "Modernise the High Command"
